kubernetes/apps/tactica-dev/tactica/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tactica-dev
spec:
  hostnames:
    - dev.tactica.systems
    - '*.dev.tactica.systems'
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - name: tactica-dev-server
          namespace: tactica-dev
          port: 80
